新增游客登录（微信小程序）

--- a/manifest.json
+++ b/manifest.json
@@ -91,7 +91,8 @@
         /* 小程序特有相关 */
         "appid" : "",
         "setting" : {
-            "urlCheck" : false
+            "urlCheck" : false,
+            "postcss" : true
         },
         "usingComponents" : true
     },
