--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "kalo",
   "version": "0.0.1",
-  "description": "Halo移动端后台管理",
+  "description": "Halo 博客移动端后台管理",
   "productName": "Kalo",
-  "author": "我不是罗大锤",
+  "author": "我不是罗大锤 <1696547463@qq.com>",
   "private": true,
   "scripts": {
     "lint": "eslint --ext .js,.vue ./",
@@ -21,14 +21,14 @@
     "vue-router": "^4.0.0"
   },
   "devDependencies": {
+    "@quasar/app-vite": "^1.3.0",
+    "autoprefixer": "^10.4.2",
     "eslint": "^8.10.0",
-    "eslint-plugin-vue": "^9.0.0",
     "eslint-config-standard": "^17.0.0",
     "eslint-plugin-import": "^2.19.1",
     "eslint-plugin-n": "^15.0.0",
     "eslint-plugin-promise": "^6.0.0",
-    "@quasar/app-vite": "^1.3.0",
-    "autoprefixer": "^10.4.2",
+    "eslint-plugin-vue": "^9.0.0",
     "postcss": "^8.4.14"
   },
   "engines": {
