--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@capacitor/app": "^5.0.5",
     "@quasar/extras": "^1.16.4",
     "axios": "^1.2.1",
+    "crypto-js": "^4.1.1",
     "quasar": "^2.6.0",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0"
