删除无关文件

--- a/.gitignore
+++ b/.gitignore
@@ -6,9 +6,11 @@ node_modules
 .quasar
 /dist
 /quasar.config.*.temporary.compiled*
-key.jks
-.vscode
-src-capacitor
+/key.jks
+/.vscode
+/src-capacitor
+/.eslintignore
+/.gitignore
 # Cordova related directories and files
 /src-cordova/node_modules
 /src-cordova/platforms
