--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   },
   "dependencies": {
     "@capacitor/action-sheet": "^5.0.5",
+    "@capacitor/android": "^5.2.1",
     "@capacitor/app": "^5.0.5",
+    "@capacitor/status-bar": "^5.0.6",
     "@quasar/extras": "^1.16.4",
     "axios": "^1.2.1",
     "crypto-js": "^4.1.1",
