--- a/.gitignore
+++ b/.gitignore
@@ -1,37 +1,14 @@
-.DS_Store
-.thumbs.db
-node_modules
-
-# Quasar core related directories
-.quasar
-/dist
-/quasar.config.*.temporary.compiled*
-/key.jks
-/.vscode
-/src-capacitor
-/.eslintignore
-/.gitignore
-# Cordova related directories and files
-/src-cordova/node_modules
-/src-cordova/platforms
-/src-cordova/plugins
-/src-cordova/www
-
-# Capacitor related directories and files
-/src-capacitor/www
-/src-capacitor/node_modules
-
-# Log files
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-
-# Editor directories and files
+*.iml
+.gradle
+gradle
+/local.properties
 .idea
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-
-# local .env files
-.env.local*
+.DS_Store
+/build
+/captures
+.externalNativeBuild
+.cxx
+local.properties
+gradlew
+gradlew.bat
+key.jks
