--- a/app/build.gradle
+++ b/app/build.gradle
@@ -72,7 +72,8 @@ dependencies {
     ksp "androidx.room:room-compiler:2.5.2"
     implementation "androidx.compose.material:material-icons-extended:1.5.4"
     implementation "androidx.navigation:navigation-compose:2.7.1"
-    implementation "io.coil-kt:coil-compose:2.1.0"
+    implementation "io.coil-kt:coil-compose:2.0.0"
+    implementation("io.coil-kt:coil-svg:2.0.0")
     implementation 'io.github.shenzhen2017:shimmer:1.0.0' // 骨架屏
 
     testImplementation 'junit:junit:4.13.2'
