--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,8 +4,6 @@ plugins {
     id 'com.google.devtools.ksp'
 }
 
-
-
 android {
     namespace 'cc.loac.kalo'
     compileSdk 34
@@ -13,7 +11,7 @@ android {
     defaultConfig {
         applicationId "cc.loac.kalo"
         minSdk 24
-        targetSdk 33
+        targetSdk 34
         versionCode 1600
         versionName '0.1.0-alpha2'
 
@@ -58,11 +56,11 @@ dependencies {
     implementation platform('org.jetbrains.kotlin:kotlin-bom:1.8.0')
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.6.2'
     implementation 'androidx.activity:activity-compose:1.7.2'
-    implementation platform('androidx.compose:compose-bom:2022.10.00')
-    implementation 'androidx.compose.ui:ui'
-    implementation 'androidx.compose.ui:ui-graphics'
-    implementation 'androidx.compose.ui:ui-tooling-preview'
-    implementation 'androidx.compose.material3:material3:1.1.2'
+    implementation platform('androidx.compose:compose-bom:2023.10.01')
+    implementation 'androidx.compose.ui:ui:1.6.0-rc01'
+    implementation 'androidx.compose.ui:ui-graphics:1.6.0-rc01'
+    implementation 'androidx.compose.ui:ui-tooling-preview:1.6.0-rc01'
+    implementation 'androidx.compose.material3:material3:1.2.0-beta02'
 
     implementation "com.squareup.retrofit2:retrofit:2.9.0"
     implementation "com.squareup.retrofit2:converter-gson:2.9.0"
@@ -71,7 +69,7 @@ dependencies {
     implementation "androidx.room:room-runtime:2.5.2"
     implementation "androidx.room:room-ktx:2.5.2"
     ksp "androidx.room:room-compiler:2.5.2"
-    implementation "androidx.navigation:navigation-compose:2.7.1"
+    implementation "androidx.navigation:navigation-compose:2.7.6"
     implementation "io.coil-kt:coil-compose:2.5.0"
     implementation("io.coil-kt:coil-svg:2.5.0")
     implementation 'io.github.shenzhen2017:shimmer:1.0.0' // 骨架屏
@@ -79,7 +77,7 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
-    androidTestImplementation platform('androidx.compose:compose-bom:2022.10.00')
+    androidTestImplementation platform('androidx.compose:compose-bom:2023.10.01')
     androidTestImplementation 'androidx.compose.ui:ui-test-junit4'
     debugImplementation 'androidx.compose.ui:ui-tooling'
     debugImplementation 'androidx.compose.ui:ui-test-manifest'
